Fix spacing between label and dropdown #816

--- a/src/app/events/components/evaluation/evaluation-dialog/evaluation-default-grade-dialog.component.scss
+++ b/src/app/events/components/evaluation/evaluation-dialog/evaluation-default-grade-dialog.component.scss
@@ -2,9 +2,17 @@
   margin-bottom: 1.5rem;
 }
 
-.dropdown {
+.dropdown-row {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+
+  label {
+    flex: 1;
+  }
+
+  bkd-select {
+    flex: 1;
+  }
 }
 
 .info-text {
